# quantum-entangler

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
examples/: midi_forward_trigger_note.rs
src/: device.rs  director.rs  lib.rs  main.rs  midi.rs  notes.rs  pattern.rs  patterns.rs  time_map.rs
src/device/: input.rs  output.rs
src/midi/: attribute.rs  perform.rs  setup.rs  time.rs
src/pattern/: random.rs
src/toolset/notes/: play.rs
src/toolset/triggers/: random.rs
