[package]
name = "quantum-entangler"
version = "0.1.0"
edition = "2021"
description = "Midi analysis and manipulation"
repository = "https://github.com/damongroove/quantum-entangler"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
lazy_static = "1.4.0"
async-std = { version = "1.10.0", features = ["attributes"] }
rand = "0.8.4"
