[package]
name = "quantum-entangler"
version = "0.1.1"
edition = "2021"
description = "Rhythm as Code"
repository = "https://github.com/damongroove/quantum-entangler"
license = "MIT"

[dependencies]
midir = "0.7.0"
lazy_static = "1.4.0"
async-std = { version = "1.10.0", features = ["attributes"] }
rand = "0.8.4"
crossbeam = "0.8.4"
